--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 
 <body>
 
-
+<section class="header">
+  <div class="row container">
+    <div class="col-6">
+      <div class="logo"></div>
+    </div>
+  </div>
+  <div class="row container">
+    <div class="col-6 col-s-12 col-m-8">
+      <div class="claim">
+        <h1>Picture perfect</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+    </div>
+  </div>
+</header>
 
 
 
