Add gallery section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,47 @@
   </div>
 </section>
 
+<section class="gallery">
+  <div class="row">
+    <div class="col-3 col-s-12 col-m-6 gal1">
+      <h1>Design quality</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Find Out more <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6 gal2">
+      <h1>Built to last</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Find Out more <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6 gal3">
+      <h1>Our clients</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Get insights <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6 gal4">
+      <h1>How to shoo great</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Find Out more <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6 col-s-12 col-m-12 gal5">
+      <h1>Sign up & see why</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Get Started Now <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6 gal6">
+      <h1>Perfect pictures</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Find Out more <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6 gal7">
+      <h1>Start something new</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Get Started Now <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+  </div>
+</section>
 
 </body>
 
