Add more power section

--- a/index.html
+++ b/index.html
@@ -83,9 +83,41 @@
       <p>Find Out more <i class="fa fa-long-arrow-right"></i> </p>
     </div>
     <div class="col-3 col-s-12 col-m-6 gal7">
-      <h1>Start something new</h1>
+      <h1>STart something new</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <p>Get Started Now <i class="fa fa-long-arrow-right"></i> </p>
+    </div>
+  </div>
+</section>
+
+<section class="a-look container">
+  <h1>A look at the details</h1>
+  <div class="row">
+    <div class="col-3 col-s-12 col-m-6">
+      <h3>Web based</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6">
+      <h3>Performance</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6">
+      <h3>Cultural</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <div class="col-3 col-s-12 col-m-6">
+      <h3>Sustainability</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
+  </div>
+</section>
+
+<section class="more-power">
+  <div class="row container">
+    <div class="col-6 col-s-12 col-m-9">
+      <h1>More power<br>behind every pixel.</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>See the options <i class="fa fa-long-arrow-right"></i></p>
     </div>
   </div>
 </section>
