Add section buying

--- a/index.html
+++ b/index.html
@@ -122,6 +122,47 @@
   </div>
 </section>
 
+<section class="reasons">
+  <div class="container">
+    <h1>Reasons to get onboard</h1>
+    <div class="row">
+      <div class="col-4 col-s-12">
+        <h3>Web based</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="col-4 col-s-12">
+        <h3>Team login</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="col-4 col-s-12">
+        <h3>Great Support</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="buying">
+  <div class="row container">
+    <div class="col-6 col-s-12">
+      <button class="lavender">Legacy</button>
+      <h1>Go it solo</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <button class="buy">Buy now $9</button>
+      <p><i class="fa fa-apple" aria-hidden="true"></i>
+      <i class="fa fa-windows" aria-hidden="true"></i></p>
+    </div>
+    <div class="col-6 col-s-12">
+      <button class="lavender">Most popular</button>
+      <h1>Team plan</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <button class="buy">Buy now $18</button>
+      <p><i class="fa fa-apple" aria-hidden="true"></i>
+      <i class="fa fa-windows" aria-hidden="true"></i></p>
+    </div>
+  </div>
+</section>
+
 </body>
 
 </html>
