Add section footer & media querries

--- a/index.html
+++ b/index.html
@@ -163,6 +163,40 @@
   </div>
 </section>
 
+<section class="footer">
+  <div class="row container">
+    <div class="col-6 col-s-12">
+      <h4>Get in touch</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="row">
+        <div class="col-4">
+          <h4>Resources</h4>
+          <p>Tour<br>Customers<br>Pricing and Plans<br>New Features<br>Education</p>
+        </div>
+        <div class="col-4">
+          <h4>Features</h4>
+          <p>Tour<br>Customers<br>Pricing and Plans<br>New Features<br>Education</p>
+        </div>
+        <div class="col-4">
+          <h4>How To’s</h4>
+          <p>Tour<br>Customers<br>Pricing and Plans<br>New Features<br>Education</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-6 col-s-12">
+      <h4>Stay in touch</h4>
+      <div class="row">
+        <form class="col-10 col-offset-1">
+          <input type="email" class="col-10">
+          <button type="submit" class="col-2"><i class="fa fa-check" aria-hidden="true"></i></button>
+        </form>
+      </div>
+      <p>We don’t send spam. Actually, who are we kiding, we’ll spam the shit out of you’r inbox</p>
+    </div>
+  <div class="sign">by 4HandsomeBandits 2019</div>
+  </div>
+</section>
+
 </body>
 
 </html>
